Fix/message overflow

--- a/src/components/Chat/components/MessageComponent/styles.module.scss
+++ b/src/components/Chat/components/MessageComponent/styles.module.scss
@@ -74,14 +74,14 @@
 }
 
 .message {
-  position: relative;
-
-  box-sizing: border-box;
   grid-area: message;
   display: flex;
+  flex-direction: column;
+  position: relative;
+  box-sizing: border-box;
   width: 75%;
   margin: 0;
-  padding: 12px 50px 12px 14px;
+  padding: 12px 14px;
   border-radius: 14px;
   
   font-family: Montserrat;
@@ -95,14 +95,14 @@
 }
 
 .myMessage {
-  position: relative;
-
-  box-sizing: border-box;
   grid-area: message;
   display: flex;
+  flex-direction: column;
+  position: relative;
+  box-sizing: border-box;
   width: 75%;
   margin: 0 0 0 auto;
-  padding: 12px 50px 12px 14px;
+  padding: 12px 14px;
   border-radius: 14px;
   
   font-family: Montserrat;
@@ -116,10 +116,7 @@
 }
 
 .time {
-  position: absolute;
-  bottom: 13px;
-  right: 13px;
-
+  align-self: end;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
